<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/post_Q_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/label_postingQ" />

        <EditText
            android:id="@+id/post_A_editText"
            style="@style/postEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_postingAnswer"
            android:inputType="textPersonName" />

        <EditText
            style="@style/postEditTextStyle"
            android:id="@+id/post_D1_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_postingDammy"
            android:ems="10" >
        </EditText>

        <EditText
            style="@style/postEditTextStyle"
            android:id="@+id/post_D2_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_postingDammy"
            android:ems="10" />

        <EditText
            style="@style/postEditTextStyle"
            android:id="@+id/post_D3_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_postingDammy"
            android:ems="10" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/postbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_postingPost" 
                android:onClick="quizPost"/>

            <Button
                android:id="@+id/postReturnBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_postingReturn" />

        </TableRow>

    </LinearLayout>

</LinearLayout>